--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=turnosHospital
+application.vendor=chris
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,10 +33,14 @@ dist.jar=${dist.dir}/turnosHospital.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/turnosHospital
+endorsed.classpath=
 excludes=
+file.reference.sqlite-jdbc-3.45.1.0.jar=C:\\Users\\chris\\Downloads\\sqlite-jdbc-3.45.1.0.jar
+file.reference.sqlite-jdbc-3.50.3.0.jar=C:\\Users\\chris\\Downloads\\sqlite-jdbc-3.50.3.0.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.sqlite-jdbc-3.50.3.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -43,7 +48,8 @@ javac.external.vm=true
 javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
-    ${javac.classpath}
+    ${javac.classpath}:\
+    ${file.reference.sqlite-jdbc-3.45.1.0.jar}
 javac.source=21
 javac.target=21
 javac.test.classpath=\
@@ -78,7 +84,8 @@ mkdist.disabled=false
 platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${file.reference.sqlite-jdbc-3.50.3.0.jar}
 # Space-separated list of JVM arguments used when running the project.
 # You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
 # To set system properties for unit tests define test-sys-prop.name=value:
@@ -87,7 +94,8 @@ run.modulepath=\
     ${javac.modulepath}
 run.test.classpath=\
     ${javac.test.classpath}:\
-    ${build.test.classes.dir}
+    ${build.test.classes.dir}:\
+    ${file.reference.sqlite-jdbc-3.45.1.0.jar}
 run.test.modulepath=\
     ${javac.test.modulepath}
 source.encoding=UTF-8
